feat: add reactive dep for mongo